yamls/rook-ceph/http_route_rook-ceph-S3.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: s3-rook-ceph
  namespace: rook-ceph 
spec:
  hostnames:
    - ceph-s3.deinfra.sc.gov.br
  parentRefs:
    - name: shared-gateway
      namespace: infra-ns
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: rook-ceph-rgw-my-store
          port: 8080
